Mapprio/main/default/objects/MapprioRadioResponsesForAccount__c/MapprioRadioResponsesForAccount__c.object-meta.xml
<CustomObject>
    <label>Mapprio Radio Responses For Account</label>
    <nameField>
        <label>Mapprio Radio Responses For Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Radio Responses For Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>