Mapprio/main/default/objects/MapprioRadioResponsesForAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mapprio Radio Responses For Accounts</relationshipLabel>
    <relationshipName>MapprioRadioResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>