Mapprio/main/default/objects/MapprioRadioResponsesForAccount__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>MapprioAnswer__c</referenceTo>
    <relationshipLabel>Mapprio Radio Responses For Accounts</relationshipLabel>
    <relationshipName>MapprioRadioResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>