Mapprio/main/default/objects/MapprioRadioResponsesForAccount__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipLabel>Mapprio Radio Responses For Accounts</relationshipLabel>
    <relationshipName>MapprioRadioResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>